added css to dynamic pages

--- a/project.njk
+++ b/project.njk
@@ -32,7 +32,7 @@ layout: navbar.njk
             {{project.client.name}}</p>
 
           <a href="/projects/{{project.name | slug}}">
-            <button>See More</button>
+            <button class="card-btn">See More</button>
           </a>
 
         </div>
