--- a/_includes/css/project.css
+++ b/_includes/css/project.css
@@ -6,7 +6,22 @@
 }
 
 .card {
-  background: antiquewhite;
+  background: #eef1ea;
   padding: 20px;
   border-radius: 5px;
+}
+
+.card-btn {
+  padding: 5px;
+  border: 3px solid;
+  border-color: #5510f1;
+  background-color: #5510f1;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+}
+
+.card-btn:hover {
+  background: #eef1ea;
+  color: black;
 }
