--- a/blog.njk
+++ b/blog.njk
@@ -25,19 +25,22 @@ data: blogs
     <h1>Total Blogs:
       {{blogs.length}}</h1>
 
-    <div>
-      {% for blog in blogs %}
-        <h1>{{ blog.title }}</h1>
-        <p>Author:
-          {{blog.author}}</p>
+    <div class="card-container">
+      <div>
+        {% for blog in blogs %}
+          <div class="card">
+            <h1>{{ blog.title }}</h1>
+            <p>Author:
+              {{blog.author}}</p>
 
-        <a href="/blogs/{{blog.title | slug}}">
-          <button>See More</button>
-        </a>
-
-      {% else %}
-        <li>This would display if the 'item' collection were empty</li>
-      {% endfor %}
+            <a href="/blogs/{{blog.title | slug}}">
+              <button class="card-btn">See More</button>
+            </a>
+          </div>
+        {% else %}
+          <li>This would display if the 'item' collection were empty</li>
+        {% endfor %}
+      </div>
     </div>
   </body>
 
