--- a/blogs.njk
+++ b/blogs.njk
@@ -11,11 +11,33 @@ permalink: '/blogs/{{blog.title|slug}}/'
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11ty with TakeShape - 🏡</title>
+    <title>11ty with TakeShape</title>
+
+    <!-- capture the CSS content as a Nunjucks variable -->
+    {% set css %}
+    {% include "css/blogs.css" %}
+    {% endset %}
+    <!-- feed it through our cssmin filter to minify -->
+    <style>
+      {{css | cssmin | safe}}
+    </style>
   </head>
 
   <body>
-    {{blog.datetime}}
+    <a href="/blog">
+      <button class="btn">Back</button>
+    </a>
+
+    <section class="container">
+      <h1>{{blog.title}}</h1>
+
+      {% for item in blog.content.blocks %}
+        <p>{{ item.text }}</p>
+      {% else %}
+        <p>Description coming soon...</p>
+      {% endfor %}
+    </section>
+
   </body>
 
 </html>
