--- a/index.njk
+++ b/index.njk
@@ -30,11 +30,32 @@ layout: navbar.njk
       <h1>I'm
         <span class="name">Natalie</span>. I'm a
         <span class="dev">Front-end developer</span>
-        based in Los Angeles, CA. I'm also a writer and movie lover.</h1>
+        based in
+        <span class="location">Los Angeles, CA</span>. I'm also a writer and movie lover.</h1>
     </section>
 
     <footer class="footer">
       <p>Made with ❤️</p>
+      <div>Home Icon made by
+        <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a>
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
+      <div>Project Icon made by
+        <a href="http://www.freepik.com/" title="Freepik">Freepik</a>
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
+      <div>Blog Icon made by
+        <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
+      <div>Women Icon made by
+        <a href="http://www.freepik.com/" title="Freepik">Freepik</a>
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
     </footer>
   </body>
 
