--- a/blog.njk
+++ b/blog.njk
@@ -9,7 +9,7 @@ data: blogs
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11ty with TakeShape - 🏡</title>
+    <title>11ty with TakeShape</title>
 
     <!-- capture the CSS content as a Nunjucks variable -->
     {% set css %}
